Fri Feb  6 09:15:11 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/irb/extend-command.rb: add irb_help command.  [ruby-talk:91610]

	* lib/irb/cmd/help.rb (IRB::ExtendCommand::Help): show RDoc.

Fri Feb  6 00:48:37 2004  Tanaka Akira  <akr@m17n.org>

	* lib/prettyprint.rb (PrettyPrint#first?): obsoleted.

Thu Feb  5 23:56:55 2004  Tanaka Akira  <akr@m17n.org>

	* lib/prettyprint.rb (PrettyPrint#seplist): added.

	* lib/pp.rb (PPMethods#pp_object): use seplist.
	  (PPMethods#pp_hash): ditto.
	  (Array#pretty_print): ditto.
	  (Struct#pretty_print): ditto.
	  (MatchData#pretty_print): ditto.

	* lib/set.rb (Set#pretty_print): use seplist.

Wed Feb  4 22:39:46 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_stat_mode): should not sign-expand, so backout.

Wed Feb  4 02:12:06 2004  Tanaka Akira  <akr@m17n.org>

	* file.c (test_l): fix wrong method name in document.
	  (test_S): ditto.
	  (test_b): ditto.
	  (test_c): ditto.
	  (test_suid): ditto.
	  (test_sgid): ditto.
	  (test_sticky): ditto.

Tue Feb  3 22:36:25 2004  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/2.0.rb, lib/rss/content.rb, lib/rss/dublincore.rb,
	  lib/rss/rss.rb, lib/rss/syndication.rb: removed warnings.

	* lib/rss/converter.rb: removed handling load error of nkf.

	* test/rss/test_syndication.rb, test/rss/test_trackback.rb,
	  test/rss/test_dublincore.rb, test/rss/test_content.rb: replaced
	  'require "rss/parser"' by 'require "rss/1.0"'.

	* test/rss/test_parser.rb, test/rss/test_accessor.rb: removed
	  'require "rss/parser"'.

Tue Feb  3 11:23:17 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (reduce_nodes): remove tail returns.  [ruby-talk:90934]

Tue Feb  3 08:04:57 2004  Tanaka Akira  <akr@m17n.org>

	* lib/pp.rb (Struct#pretty_print_cycle): follow 1.8 style.

Mon Feb  2 22:06:31 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (block_append, new_evstr, void_expr0): remove no longer used
	  labels.
